--- a/module3-solution/styles/styles.css
+++ b/module3-solution/styles/styles.css
@@ -50,3 +50,8 @@ input[type="text"] {
     transform: rotate(360deg);
   }
 }
+.emptyMessage {
+  font-weight: bold;
+  color: red;
+  font-size: 1.2em;
+}
