show nothing found.

--- a/module3-solution/templates/foundItems.html
+++ b/module3-solution/templates/foundItems.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<ul class="list-group">
-		<li ng-if='narrowItDown.found.length===0' class="list-group-item">
+		<li ng-if="narrowItDown.nothingFound();" class="list-group-item">
 			<div class="emptyMessage" role="alert">Nothing found</div>
 	  </li>
 
